# poc-service-amongus

./: Dockerfile  app.py  chat_bot.html  clustering_client.py  data_agent.py  data_cleaning.py  docker_command  duplicate_recommender_agent.py  elastic_client.py  example_calling.txt  feedback_agent.py  locust.py  pyproject.toml  readme.md  router_agent.py  stanard_example.py  test.py  tools.py
data/: clustered_data.csv  data.csv  data_with_duplicates.csv  data_with_roles_permissions.csv  feedback.txt
